@startuml


Arma <|-- Cuchillo
Rango <|.right. Novato
Jugador ..> Arma
Jugador o--> "1" Rango
Arma ..> Reloj
Jugador ..> Reloj
Jugador .> Ciudad
Rango ..> Reloj
Rango ..> Ciudad
Ciudad ->"1" Posicion
Ciudad "1"-left>"**" Edificio
Posicion . Posicion

abstract class Arma {
    {abstract} + herir(reloj : Reloj) : void
}

 class Cuchillo{
     + herir(reloj : Reloj) : void
}


interface Rango {
    {abstract} + viajar(c: Ciudad,  r : Reloj) : void
}


class Novato {
    - velocidad
    + viajar(c: Ciudad,  r : Reloj) : void
}

class Jugador {
    - ciudadActual : Ciudad
    - mision : Mision
    + visitar(edificio:String, r : Reloj): Pista
    + viajar(destino : Ciudad , r : Reloj): void
    + dormir( r : Reloj) : void
    + herir(a : Armar, r : Reloj) : void
}

class Ciudad {
    + tiempoViaje(destino : Ciudad, velocidad : double): double
    - calcularDistanciaCon(ciudad : Ciudad): double
}

class Posicion {
    - latitud: double
    - longitud: double
    + calcularDistanciaCon(posicion : Posicion)
}


class Reloj{
    - fechaActual: DateTime
    + incrementar(horas : int): void
    + esMayor(fecha : DateTime): bool
}

class Edificio{
    - Pista pista
    - int contadorDeVisitas
    + visitar(Reloj reloj): Pista

}

@enduml
